# akl

./: .gitignore  README.md  akl.py
.github/workflows/: rust.yml
akl-rs/: Cargo.toml
akl-rs/src/: main.rs  pdflib.rs
firefox-extension/: README.md  akl-acm-extension.js  akl-arxiv-extension.js  akl-drops-extension.js  akl-elsevier-extension.js  akl-extension.js  akl-lmcs-extension.js  akl-springer-extension.js  background.js  manifest.json
latex-package/: README.md  akltex.sty  entities.tex
latex-package/demo/: bibliography.bib  demo.tex
vim-plugin/: README.md  akl.vim  akltex.py
