[package]
name = "akl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
copypasta = "0.8.2"
copypasta-ext = "0.4.4"
notifica = "3.0.2"
lopdf = "0.30.0"
serde_urlencoded = "0.7.1"
url = { version = "2.3.1", features = ["serde"] }
serde = "1.0.160"
colorsys = "0.6.7"
thiserror = "1.0.40"
directories = "5.0.1"
tempfile = "3.5.0"
open = "4.1.0"
chrono = "0.4.24"
serde_yaml = "0.9.21"
anyhow = "1.0.71"
reqwest = { version = "0.11.17", features = ["blocking"] }
sha2 = "0.10.6"
file-rotate = "0.7.3"
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.96"
